apis rendring part completed

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,11 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test API Documentation</title>
-    <link rel="stylesheet" href="path/to/your/css/file.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
-    <h1>i'm getting served from public folder</h1>
+    <header>
+        <div class="header-content">
+            <div class="brand">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/024/553/534/small/lion-head-logo-mascot-wildlife-animal-illustration-generative-ai-png.png"
+                    alt="Logo" class="logo">
+                <h3 class="name">outport</h3>
+            </div>
+            <div class="title-container">
+                <h1>Test API <span class="version">v1.0.0</span></h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            </div>
+            <div class="base-url-container">
+                <p class="base-path">Base Path: https://www.dummybaseurl.dummy/api</p>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <div id="outport-ui"></div>
+        </section>
+    </main>
+
+    <script src="./index.js"></script>
+
+    <script src="./outport-des-init.js"></script>
 </body>
 
 </html>
