basic structure to hit api setup

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,17 +17,18 @@
                 <h3 class="name">outport</h3>
             </div>
             <div class="title-container">
-                <h1>Test API <span class="version">v1.0.0</span></h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
-                    publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <div class="title-wrapper">
+                    <h1 id="title"></h1>
+                    <span id="version" class="version"></span>
+                </div>
+                <p id="description"></p>
             </div>
             <div class="base-url-container">
-                <p class="base-path">Base Path: https://www.dummybaseurl.dummy/api</p>
+                <p class="base-path">Base Path:</p>
+                <select id="baseUrlSelector" class="base-url-selector">
+                </select>
             </div>
+
         </div>
     </header>
 
