apis testing implemented

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -37,6 +37,12 @@
             <div id="outport-ui"></div>
         </section>
     </main>
+    <!-- Toast message component -->
+    <div id="toast" class="toast-container">
+        <p id="toast-text"></p>
+        <button class="toast-close" onclick="hideToast()">✖</button>
+    </div>
+
 
     <script src="./index.js"></script>
 
