changed structure and added formdata in ui

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -60,9 +60,13 @@
     </div>
 
 
+    
+    <script type="module" src="./outport-des-init.js"></script>
     <script src="./index.js"></script>
 
-    <script src="./outport-des-init.js"></script>
+    <script type="module" src="./render-content.js"></script>
+    
+
 </body>
 
 </html>
