--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,10 +11,16 @@
 <body>
     <header>
         <div class="header-content">
-            <div class="brand">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/024/553/534/small/lion-head-logo-mascot-wildlife-animal-illustration-generative-ai-png.png"
-                    alt="Logo" class="logo">
-                <h3 class="name">outport</h3>
+            <div class="flex-box">
+                <div class="brand">
+                    <img src="https://static.vecteezy.com/system/resources/thumbnails/024/553/534/small/lion-head-logo-mascot-wildlife-animal-illustration-generative-ai-png.png"
+                        alt="Logo" class="logo">
+                    <h3 class="name">outport</h3>
+                </div>
+    
+                <div>
+                    <a class="primary-button" href="playground.html">Playground</a>
+                </div>
             </div>
             <div class="title-container">
                 <div class="title-wrapper">
@@ -30,7 +36,7 @@
                     </select>
                 </div>
                 <div>
-                    <button class="headers-button" onclick="showModal()">Headers</button>
+                    <button class="primary-button" onclick="showModal()">Headers</button>
                 </div>
             </div>
         </div>
